# PAOO

./: README.md
tema1/: CMakeLists.txt
tema1/include/: ComplexNumber.h
tema1/src/: ComplexNumber.cpp  main.cpp
tema2/: CMakeLists.txt
tema2/include/: ComplexNumber.h  DerivedComplexNumber.h  DumbComplexNumber.h
tema2/src/: ComplexNumber.cpp  DerivedComplexNumber.cpp  DumbComplexNumber.cpp  main.cpp
tema3/: CMakeLists.txt
tema3/include/: ComplexNumber.h  DummyComplexNumber.h
tema3/src/: ComplexNumber.cpp  DummyComplexNumber.cpp  main.cpp
tema4/: CMakeLists.txt
tema4/include/: Resource.h  ResourceManager.h
tema4/src/: Resource.cpp  ResourceManager.cpp  main.cpp
